# spirosim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  clubspiro.ipynb  pyproject.toml  requirements.lock.txt  requirements.txt  spirosim.ipynb
configs/: PheromoneExperiment_Trial1_After_20260121.toml  PheromoneExperiment_Trial1_Before_20260121 copy.toml  PheromoneExperiment_Trial1_Before_20260121.toml  PheromoneExperiment_Trial1_Many_20260121.toml  default_analysis.toml  test.toml
spirosim/: __main__.py  simulation.py
src/spiro_analysis/: DELETE_crop_circles.py  DELETE_main.py  __init__.py  analysis.py  cli.py  preprocess.py
src/spiro_analysis/utils/: overlay_circles.py  play_movie.py
src/spiro_cfd/faxen/: __init__.py
src/spiro_cfd/kernels/: __init__.py
src/spiro_cfd/simulation/: __init__.py
src/spiro_cfd/viz/: __init__.py
tests/: test_background.py  test_import.py
