[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spirosim"
version = "0.2.0"

[project.scripts]
preprocess = "spiro_analysis.cli:preprocess"
analysis = "spiro_analysis.cli:analysis"
view-tracks = "spiro_analysis.cli:view_tracks"

[tool.setuptools.packages.find]
where = ["src"]